instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value set
set CouleurBrosse(blue) 
^InstructionsDrawG:1: error: not found: value blue
set CouleurBrosse(blue) 
                  ^